tests/miniJava/neg/003886_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { int while ( 0 ) { } } }
